[gd_scene load_steps=7 format=3 uid="uid://cy3hmfqs3si8s"]

[ext_resource type="Texture2D" uid="uid://do2k6mkblk7o6" path="res://assets/words/ZonaDeContagio.png" id="1_rl46u"]
[ext_resource type="Script" path="res://UI/menu.gd" id="1_vk18w"]
[ext_resource type="Texture2D" uid="uid://bkorf0clp0x7a" path="res://UI/Logo4_UTF.png" id="2_crbs4"]
[ext_resource type="Texture2D" uid="uid://cycau3iepe4kp" path="res://UI/back.png" id="2_dpifc"]
[ext_resource type="Texture2D" uid="uid://chyqkml8fpyn6" path="res://UI/teclas.png" id="5_sgtam"]
[ext_resource type="Texture2D" uid="uid://nby3ut1s7ws8" path="res://UI/mouse.png" id="6_wnd3f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vk18w")

[node name="UI" type="Control" parent="."]
editor_description = "Aqui pode colocar tanto um cor de fundo quanto uma print do jogo p/ deixar de background"
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_right = 1168.0
offset_bottom = 664.0
color = Color(0.819608, 0.611765, 0, 1)

[node name="Background" type="Sprite2D" parent="UI"]
position = Vector2(575.5, 324)
scale = Vector2(1.91833, 1.59506)
texture = ExtResource("2_dpifc")

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UTF" type="Sprite2D" parent="Main"]
position = Vector2(1112, 600)
texture = ExtResource("2_crbs4")
hframes = 15

[node name="ColorRect" type="ColorRect" parent="Main"]
layout_mode = 0
offset_left = 272.0
offset_top = 24.0
offset_right = 312.0
offset_bottom = 64.0
scale = Vector2(13.8324, 7.82505)
color = Color(0, 0, 0, 0.337255)

[node name="LogoGame" type="Sprite2D" parent="Main"]
position = Vector2(560, 153.702)
scale = Vector2(1.58022, 1.49281)
texture = ExtResource("1_rl46u")

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 0
offset_left = 480.0
offset_top = 376.0
offset_right = 569.0
offset_bottom = 512.0
scale = Vector2(1.82943, 1.82943)

[node name="Jogar" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Jogar"

[node name="Instrucoes" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Instrucoes"

[node name="Creditos" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Credito"

[node name="Sair" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="Instrucoes" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Voltar" type="Button" parent="Instrucoes"]
layout_mode = 0
offset_top = 584.0
offset_right = 99.0
offset_bottom = 640.0
text = "Voltar"

[node name="Keyboard" type="Sprite2D" parent="Instrucoes"]
position = Vector2(384, 304)
scale = Vector2(4.5, 4.5)
texture = ExtResource("5_sgtam")

[node name="Mouse" type="Sprite2D" parent="Instrucoes"]
position = Vector2(712, 296)
scale = Vector2(4.5, 4.5)
texture = ExtResource("6_wnd3f")

[node name="Creditos" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Creditos"]
modulate = Color(1, 0.0980392, 0, 1)
layout_mode = 0
offset_left = 680.0
offset_top = 26.0
offset_right = 1144.0
offset_bottom = 206.0
bbcode_enabled = true
text = "Escreve os crÃ©ditos ai!
Para ajustar certinho o tamanho, vc vai mexer nessa mesma aba, em control->layout->transform, e mexer no size e ajustar conforme precise"

[node name="Voltar" type="Button" parent="Creditos"]
layout_mode = 0
offset_top = 568.0
offset_right = 55.0
offset_bottom = 599.0
scale = Vector2(2.2657, 2.2657)
text = "Voltar"

[connection signal="pressed" from="Main/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Instrucoes" to="." method="_on_instrucoes_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="Instrucoes/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Creditos/Voltar" to="." method="_on_voltar_pressed"]
